feat: enhance time entry dialog with improved layout and functionality for absence management